// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pagination [NEGATIVE] should render with wrong props 1`] = `
.c15 {
  position: absolute;
  will-change: opacity,transform;
  border-radius: 50%;
  -webkit-animation: bykygw 600ms cubic-bezier(0.4,0,0.2,1) forwards;
  animation: bykygw 600ms cubic-bezier(0.4,0,0.2,1) forwards;
  z-index: 0;
  background-color: #E3EAFB;
  pointer-events: none;
}

.c12 {
  position: relative;
  z-index: 0;
  display: -webkit-box !important;
  display: -webkit-flex !important;
  display: -ms-flexbox !important;
  display: flex !important;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 0.25rem;
  width: 100%;
  white-space: nowrap;
  padding: 0;
  overflow: hidden;
  -webkit-transition-duration: 0;
  transition-duration: 0;
  -webkit-transition-property: background-color;
  transition-property: background-color;
  height: 1.5rem;
  width: 1.5rem;
  border: none;
  background-color: transparent;
}

.c12:hover {
  cursor: pointer;
}

.c12 > div {
  color: #4475E3;
}

.c12 > div svg {
  fill: #4475E3;
}

.c12:hover:enabled > div {
  color: #2F65E0;
}

.c12:hover:enabled > div svg {
  fill: #2F65E0;
}

.c12:hover:enabled:active > div {
  color: #2057D5;
}

.c12:hover:enabled:active > div svg {
  fill: #2057D5;
}

.c12:disabled > div {
  color: #B3C6F1;
}

.c12:disabled > div svg {
  fill: #B3C6F1;
}

.c12:focus-visible {
  outline: 0.125rem solid #C7D6F7;
}

.c12:focus-visible > div {
  color: #4475E3;
}

.c12:focus-visible > div svg {
  fill: #4475E3;
}

.c12:hover:enabled {
  background-color: #ECF1FC;
}

.c12:hover:enabled:active > div {
  color: #2057D5;
}

.c12:hover:enabled:active > div svg {
  fill: #2057D5;
}

.c12:focus-visible:enabled {
  background-color: #C7D6F7;
  outline: none;
}

.c14 {
  position: relative;
  z-index: 2;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-transform: translate3d(0,0,0.0625rem);
  -ms-transform: translate3d(0,0,0.0625rem);
  transform: translate3d(0,0,0.0625rem);
}

.c5 {
  position: relative;
  width: 100%;
}

.c10 {
  font-family: Inter,sans-serif;
  font-size: 0.875rem;
  line-height: 1.3125rem;
  font-weight: 400;
  font-style: normal;
  color: #808080;
  grid-area: label;
  text-overflow: ellipsis;
  white-space: nowrap;
  overflow: hidden;
}

.c11 {
  grid-area: right-icon;
}

.c8 {
  width: 100%;
  height: 1.5625rem;
  padding: 0 1rem;
  padding-right: 0.5rem;
  box-sizing: border-box;
  display: grid;
  grid-template-areas: ' label right-icon';
  grid-template-columns: 1fr 24px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 0.25rem;
  background-color: #FFFFFF;
  border: 0.0625rem solid transparent;
  border-top-width: 0;
  -webkit-transition: all 300ms cubic-bezier(0.45,0.05,0,1);
  transition: all 300ms cubic-bezier(0.45,0.05,0,1);
}

.c8:hover {
  cursor: pointer;
}

.c9 {
  border-top-width: 0.0625rem;
  border-color: !important;
  border-radius: 0.25rem;
}

.c9:hover {
  border-color: #2F65E0;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  font-family: Inter,sans-serif;
  font-size: 0.875rem;
  line-height: 1.3125rem;
  font-weight: 400;
  font-style: normal;
  line-height: 1.75rem;
}

.c1 {
  font-family: Inter,sans-serif;
  font-size: 0.875rem;
  line-height: 1.3125rem;
  font-weight: 400;
  font-style: normal;
  color: #4475E3;
  line-height: 1.75rem;
}

.c2 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-right: -0.125rem;
}

.c13 {
  margin-left: 1rem;
}

.c13:disabled > div {
  background-color: transparent;
}

.c13:disabled > div svg {
  fill: #DBDBDB;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-right: 2.5625rem;
}

.c4 {
  font-family: Inter,sans-serif;
  font-size: 0.875rem;
  line-height: 1.3125rem;
  font-weight: 400;
  font-style: normal;
  color: #4475E3;
  margin-right: 0.5rem;
}

.c6 {
  width: 2.5rem;
  height: 1.5625rem;
  border: none;
  border-radius: 0.25rem;
  z-index: 10;
  color: #808080;
}

.c6 > .c7 {
  position: relative;
  z-index: 100;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding-left: 0.375rem;
  padding-right: 0.375rem;
  border-color: #DBDBDB;
}

.c6 > .c7:hover {
  cursor: pointer;
}

.c6 > .c7 > svg {
  display: none;
}

<body>
  <div>
    <div
      class="c0"
      data-testid="pagination"
    >
      <div
        class="c1"
        data-testid="info"
      >
        0--1 of -1
      </div>
      <div
        class="c2"
      >
        <div
          class="c3"
        >
          <span
            class="c4"
          >
            Rows per page
          </span>
          <div
            class="c5 c6"
          >
            <div
              class="c7 c8 c9"
              data-testid="value-item"
            >
              <div
                class="c10"
              />
              <svg
                class="c11"
              />
            </div>
          </div>
        </div>
        <button
          aria-label="Go to First"
          class="c12 c13"
          data-testid="go-to-first"
          fill="text"
          style="overflow: hidden; position: relative;"
        >
          <div
            class="c14"
            data-testid="content"
          >
            <svg />
          </div>
          <div
            class="c15"
            color="primaryLightPressed"
            opacity="1,1"
            scale="0"
            style="display: none; width: 0rem; height: 0rem; top: 0rem; left: 0rem;"
          />
        </button>
        <button
          aria-label="Go to Previous"
          class="c12 c13"
          data-testid="go-to-previous"
          fill="text"
          style="overflow: hidden; position: relative;"
        >
          <div
            class="c14"
            data-testid="content"
          >
            <svg />
          </div>
          <div
            class="c15"
            color="primaryLightPressed"
            opacity="1,1"
            scale="0"
            style="display: none; width: 0rem; height: 0rem; top: 0rem; left: 0rem;"
          />
        </button>
        <button
          aria-label="Go to Next"
          class="c12 c13"
          data-testid="go-to-next"
          fill="text"
          style="overflow: hidden; position: relative;"
        >
          <div
            class="c14"
            data-testid="content"
          >
            <svg />
          </div>
          <div
            class="c15"
            color="primaryLightPressed"
            opacity="1,1"
            scale="0"
            style="display: none; width: 0rem; height: 0rem; top: 0rem; left: 0rem;"
          />
        </button>
        <button
          aria-label="Go to Last"
          class="c12 c13"
          data-testid="go-to-last"
          fill="text"
          style="overflow: hidden; position: relative;"
        >
          <div
            class="c14"
            data-testid="content"
          >
            <svg />
          </div>
          <div
            class="c15"
            color="primaryLightPressed"
            opacity="1,1"
            scale="0"
            style="display: none; width: 0rem; height: 0rem; top: 0rem; left: 0rem;"
          />
        </button>
      </div>
    </div>
  </div>
</body>
`;

exports[`Pagination test pagination render 1`] = `
.c15 {
  position: absolute;
  will-change: opacity,transform;
  border-radius: 50%;
  -webkit-animation: bykygw 600ms cubic-bezier(0.4,0,0.2,1) forwards;
  animation: bykygw 600ms cubic-bezier(0.4,0,0.2,1) forwards;
  z-index: 0;
  background-color: #E3EAFB;
  pointer-events: none;
}

.c12 {
  position: relative;
  z-index: 0;
  display: -webkit-box !important;
  display: -webkit-flex !important;
  display: -ms-flexbox !important;
  display: flex !important;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 0.25rem;
  width: 100%;
  white-space: nowrap;
  padding: 0;
  overflow: hidden;
  -webkit-transition-duration: 0;
  transition-duration: 0;
  -webkit-transition-property: background-color;
  transition-property: background-color;
  height: 1.5rem;
  width: 1.5rem;
  border: none;
  background-color: transparent;
}

.c12:hover {
  cursor: pointer;
}

.c12 > div {
  color: #4475E3;
}

.c12 > div svg {
  fill: #4475E3;
}

.c12:hover:enabled > div {
  color: #2F65E0;
}

.c12:hover:enabled > div svg {
  fill: #2F65E0;
}

.c12:hover:enabled:active > div {
  color: #2057D5;
}

.c12:hover:enabled:active > div svg {
  fill: #2057D5;
}

.c12:disabled > div {
  color: #B3C6F1;
}

.c12:disabled > div svg {
  fill: #B3C6F1;
}

.c12:focus-visible {
  outline: 0.125rem solid #C7D6F7;
}

.c12:focus-visible > div {
  color: #4475E3;
}

.c12:focus-visible > div svg {
  fill: #4475E3;
}

.c12:hover:enabled {
  background-color: #ECF1FC;
}

.c12:hover:enabled:active > div {
  color: #2057D5;
}

.c12:hover:enabled:active > div svg {
  fill: #2057D5;
}

.c12:focus-visible:enabled {
  background-color: #C7D6F7;
  outline: none;
}

.c14 {
  position: relative;
  z-index: 2;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-transform: translate3d(0,0,0.0625rem);
  -ms-transform: translate3d(0,0,0.0625rem);
  transform: translate3d(0,0,0.0625rem);
}

.c5 {
  position: relative;
  width: 100%;
}

.c10 {
  font-family: Inter,sans-serif;
  font-size: 0.875rem;
  line-height: 1.3125rem;
  font-weight: 400;
  font-style: normal;
  color: #474747;
  grid-area: label;
  text-overflow: ellipsis;
  white-space: nowrap;
  overflow: hidden;
}

.c11 {
  grid-area: right-icon;
}

.c8 {
  width: 100%;
  height: 1.5625rem;
  padding: 0 1rem;
  padding-right: 0.5rem;
  box-sizing: border-box;
  display: grid;
  grid-template-areas: ' label right-icon';
  grid-template-columns: 1fr 24px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 0.25rem;
  background-color: #FFFFFF;
  border: 0.0625rem solid transparent;
  border-top-width: 0;
  -webkit-transition: all 300ms cubic-bezier(0.45,0.05,0,1);
  transition: all 300ms cubic-bezier(0.45,0.05,0,1);
}

.c8:hover {
  cursor: pointer;
}

.c9 {
  border-top-width: 0.0625rem;
  border-color: !important;
  border-radius: 0.25rem;
}

.c9:hover {
  border-color: #2F65E0;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  font-family: Inter,sans-serif;
  font-size: 0.875rem;
  line-height: 1.3125rem;
  font-weight: 400;
  font-style: normal;
  line-height: 1.75rem;
}

.c1 {
  font-family: Inter,sans-serif;
  font-size: 0.875rem;
  line-height: 1.3125rem;
  font-weight: 400;
  font-style: normal;
  color: #4475E3;
  line-height: 1.75rem;
}

.c2 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-right: -0.125rem;
}

.c13 {
  margin-left: 1rem;
}

.c13:disabled > div {
  background-color: transparent;
}

.c13:disabled > div svg {
  fill: #DBDBDB;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-right: 2.5625rem;
}

.c4 {
  font-family: Inter,sans-serif;
  font-size: 0.875rem;
  line-height: 1.3125rem;
  font-weight: 400;
  font-style: normal;
  color: #4475E3;
  margin-right: 0.5rem;
}

.c6 {
  width: 2.5rem;
  height: 1.5625rem;
  border: none;
  border-radius: 0.25rem;
  z-index: 10;
  color: #808080;
}

.c6 > .c7 {
  position: relative;
  z-index: 100;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding-left: 0.375rem;
  padding-right: 0.375rem;
  border-color: #DBDBDB;
}

.c6 > .c7:hover {
  cursor: pointer;
}

.c6 > .c7 > svg {
  display: none;
}

<body>
  <div>
    <div
      class="c0"
      data-testid="pagination"
    >
      <div
        class="c1"
        data-testid="info"
      >
        41-51 of 1000
      </div>
      <div
        class="c2"
      >
        <div
          class="c3"
        >
          <span
            class="c4"
          >
            Rows per page
          </span>
          <div
            class="c5 c6"
          >
            <div
              class="c7 c8 c9"
              data-testid="value-item"
            >
              <div
                class="c10"
              >
                10
              </div>
              <svg
                class="c11"
              />
            </div>
          </div>
        </div>
        <button
          aria-label="Go to First"
          class="c12 c13"
          data-testid="go-to-first"
          fill="text"
          style="overflow: hidden; position: relative;"
        >
          <div
            class="c14"
            data-testid="content"
          >
            <svg />
          </div>
          <div
            class="c15"
            color="primaryLightPressed"
            opacity="1,1"
            scale="0"
            style="display: none; width: 0rem; height: 0rem; top: 0rem; left: 0rem;"
          />
        </button>
        <button
          aria-label="Go to Previous"
          class="c12 c13"
          data-testid="go-to-previous"
          fill="text"
          style="overflow: hidden; position: relative;"
        >
          <div
            class="c14"
            data-testid="content"
          >
            <svg />
          </div>
          <div
            class="c15"
            color="primaryLightPressed"
            opacity="1,1"
            scale="0"
            style="display: none; width: 0rem; height: 0rem; top: 0rem; left: 0rem;"
          />
        </button>
        <button
          aria-label="Go to Next"
          class="c12 c13"
          data-testid="go-to-next"
          fill="text"
          style="overflow: hidden; position: relative;"
        >
          <div
            class="c14"
            data-testid="content"
          >
            <svg />
          </div>
          <div
            class="c15"
            color="primaryLightPressed"
            opacity="1,1"
            scale="0"
            style="display: none; width: 0rem; height: 0rem; top: 0rem; left: 0rem;"
          />
        </button>
        <button
          aria-label="Go to Last"
          class="c12 c13"
          data-testid="go-to-last"
          fill="text"
          style="overflow: hidden; position: relative;"
        >
          <div
            class="c14"
            data-testid="content"
          >
            <svg />
          </div>
          <div
            class="c15"
            color="primaryLightPressed"
            opacity="1,1"
            scale="0"
            style="display: none; width: 0rem; height: 0rem; top: 0rem; left: 0rem;"
          />
        </button>
      </div>
    </div>
  </div>
</body>
`;
